--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -4,7 +4,7 @@
 
 {% set name = goname.split('/')[-1] %}
 
-{% set x4_plugin = name + '_v' + version + "_x4" + (".exe" if win else "")%}
+{% set x4_plugin = name + '_v' + version + "_x4" %}
 
 {% set sha256 = "93e5e6812f5181c93de392fb5113f3ebd5b5d32f21d8542dab04dc9a84e776ae" %}
 {% set sha256_win64 = "26cebbdbe6108468b36d9df0aeb4a9aa87e9f42234a554bc4c1afcf999480df2" %}
@@ -21,8 +21,8 @@ source:
 build:
   number: 0
   script:
-    - go build -v -o $GOBIN/{{ x4_plugin }} .  # [unix]
-    - go build -v -o %GOBIN%\{{ x4_plugin }} .  # [win]
+    - go build -v -o {{ target_gobin }}{{ x4_plugin }}{{ target_goexe }} .  # [unix]
+    - go build -v -o %GOBIN%\{{ x4_plugin }}{{ target_goexe }} .  # [win]
 
 requirements:
   build:
@@ -42,7 +42,7 @@ test:
     - terraform init
     # Tests that no plugins were downloaded
     - test -f .terraform/plugins/{{ goos }}_{{ goarch }}/lock.json
-    - test ! -f .terraform/plugins/{{ goos }}_{{ goarch }}/{{ x4_plugin }}
+    - test ! -f .terraform/plugins/{{ goos }}_{{ goarch }}/{{ x4_plugin }}{{ target_goexe }}
 
 about:
   home: https://www.terraform.io
